--- a/exhibitions_page-1.html
+++ b/exhibitions_page-1.html
@@ -4,18 +4,24 @@
     <!-- head内の要素についてメモを残しましょう。 -->
 
     <meta charset="utf-8" />
+    <!-- 文字コード -->
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <title>あなたの持ちモノ写真展</title>
+    <!-- IEに最新の挙動をさせる -->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <!-- レスポンシブ対応 -->
+    <title>あな持ち | あなたの持ち物写真展</title>
+    <!-- ページタブに表示される、サイトのタイトル -->
     <meta
       name="description"
       content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を、無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。"
     />
     <meta
-      name="keywords"
-      content="あな持ち, 持ち物, 道具, 個展, 写真展, 写真, カメラ, 投稿, sns, 写真 アプリ"
-    />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    name="keywords"
+    content="あな持ち, 持ち物, 道具, 個展, 写真展, 写真, カメラ, 投稿, sns, 写真 アプリ"
+  />
 
+
+<!-- sns関連のmetaタグ -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="あな持ち | あなたの持ち物写真展" />
     <meta
@@ -23,19 +29,21 @@
       content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を、無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。"
     />
     <meta property="og:site_name" content="あな持ち" />
-    <!-- <meta property="og:url" content="https://anamochi.yano/" /> -->
+    <meta property="og:url" content="https://anamochi.yano/" />
     <meta property="og:image" content="./img/item/ランタン.jpg" />
-    <!-- <meta property="fb:app_id" content="1684914615163108" />
-    <meta name="twitter:card" content="summary_large_image" /> -->
-    <!-- <meta name="twitter:site" content="@CotenPics" /> -->
+
+    <meta property="fb:app_id" content="1684914615163108" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@CotenPics" />
     <meta name="twitter:title" content="あな持ち | あなたの持ち物写真展" />
     <meta
       name="twitter:description"
       content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を、無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。"
     />
     <meta name="twitter:image" content="./img/item/ランタン.jpg" />
-    <meta content="no-preview" name="turbolinks-cache-control" />
 
+    <meta content="no-preview" name="turbolinks-cache-control" />
     <meta name="csrf-param" content="authenticity_token" />
     <meta
       name="csrf-token"
@@ -49,6 +57,7 @@
       href="./img/icon/シャッターアイコン4 (2).png"
     />
 
+    
 
     <!-- stylesheets -->
     <link
@@ -256,8 +265,7 @@
                       target="_blank"
                       class="exhibition-show__info-foot-menu-item-in cmn__share-dropdown-menu-item-in fb"
                       title="Facebookで共有"
-                      onclick="window.open(this.href, &#39;&#39;, &#39;menubar=no,toolbar=no,resizable=yes,scrollbars=yes,width=640,height=480&#39;+&#39;,left=&#39;+(screen.width-640)/2+&#39;,top=&#39;+(screen.height-480)/2);return false;"
-                      href="http://www.facebook.com/dialog/feed?app_id=1684914615163108&amp;link=https://coten.pics/exhibitions/6759&amp;picture=https://s3-ap-northeast-1.amazonaws.com/coten.images/picture/6759/s_pic2fd24a67-a997-42b0-afba-7594f0facc03.jpg&amp;name=Life%20is%20Beautiful%20027 by %E6%9D%BE%E4%B8%8B%20%E3%83%9E%E3%82%B5%E3%82%AD - 個展&amp;caption=coten&amp;description=松下 マサキの個展。開催期間は2018年12月17日(月) 21時28分まで。&amp;display=page"
+                      href="https://www.facebook.com/sharer.php?src=bm&u=http://wemo.tech&t=備忘録ブログです"
                       >facebook</a
                     >
                   </li>
@@ -266,8 +274,7 @@
                       target="_blank"
                       class="exhibition-show__info-foot-menu-item-in cmn__share-dropdown-menu-item-in twt"
                       title="twitterで共有"
-                      onclick="window.open(this.href, &#39;&#39;, &#39;menubar=no,toolbar=no,resizable=yes,scrollbars=yes,width=640,height=480&#39;+&#39;,left=&#39;+(screen.width-640)/2+&#39;,top=&#39;+(screen.height-480)/2);return false;"
-                      href="https://twitter.com/intent/tweet?text=Life%20is%20Beautiful%20027 by %E6%9D%BE%E4%B8%8B%20%E3%83%9E%E3%82%B5%E3%82%AD - 個展%0a&amp;url=https://coten.pics/exhibitions/6759&amp;hashtags=coten"
+                      href="https://twitter.com/intent/tweet?url=./exhibitions_page-1.html&text=タイトルとか" target="blank_"
                       >twitter</a
                     >
                   </li>
@@ -275,7 +282,6 @@
                     <a
                       class="exhibition-show__info-foot-menu-item-in cmn__share-dropdown-menu-item-in ggl"
                       title="instagramで共有"
-                      onclick="window.open(this.href, &#39;&#39;, &#39;menubar=no,toolbar=no,resizable=yes,scrollbars=yes,width=640,height=480&#39;+&#39;,left=&#39;+(screen.width-640)/2+&#39;,top=&#39;+(screen.height-480)/2);return false;"
                       href="https://plus.google.com/share?url=https://coten.pics/exhibitions/6759"
                       >instagram</a
                     >
