--- a/exhibitions_page-1.html
+++ b/exhibitions_page-1.html
@@ -13,7 +13,7 @@
     <!-- ページタブに表示される、サイトのタイトル -->
     <meta
       name="description"
-      content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を、無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。"
+      content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。"
     />
     <meta
     name="keywords"
@@ -26,23 +26,27 @@
     <meta property="og:title" content="あな持ち | あなたの持ち物写真展" />
     <meta
       property="og:description"
-      content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を、無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。"
+      content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。"
     />
     <meta property="og:site_name" content="あな持ち" />
     <meta property="og:url" content="https://anamochi.yano/" />
     <meta property="og:image" content="./img/item/ランタン.jpg" />
 
-    <meta property="fb:app_id" content="1684914615163108" />
+<!-- フェイスブック -->
+    <meta property="fb:app_id" content="(facebookID番号)" />
 
+    <!-- twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@CotenPics" />
+    <meta name="twitter:site" content="@anamochi" />
     <meta name="twitter:title" content="あな持ち | あなたの持ち物写真展" />
     <meta
       name="twitter:description"
-      content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を、無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。"
+      content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。"
     />
     <meta name="twitter:image" content="./img/item/ランタン.jpg" />
 
+
+<!-- ?? -->
     <meta content="no-preview" name="turbolinks-cache-control" />
     <meta name="csrf-param" content="authenticity_token" />
     <meta
@@ -281,8 +285,8 @@
                   <li class="exhibition-show__info-foot-menu-item share">
                     <a
                       class="exhibition-show__info-foot-menu-item-in cmn__share-dropdown-menu-item-in ggl"
-                      title="instagramで共有"
-                      href="https://plus.google.com/share?url=https://coten.pics/exhibitions/6759"
+                      title="instagramへ移る"
+                      href="https://www.instagram.com/instagramjapan/?hl=ja"
                       >instagram</a
                     >
                   </li>
