--- a/exhibitions_page-1 - コピー.html
+++ b/exhibitions_page-1 - コピー.html
@@ -2,12 +2,43 @@
 <html lang="ja">
 
 <head>
+  <!-- head内の要素についてメモを残しましょう。 -->
+
   <meta charset="utf-8" />
+  <!-- 文字コード -->
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-  <title>持ちモノ写真展</title>
-  <meta name="description" content="授業内課題として、日用品を過度におしゃれに紹介するWebギャラリー。" />
-  <meta name="keywords" content="課題制作,Webギャラリー,日用品,写真" />
+  <!-- IEに最新の挙動をさせる -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <!-- レスポンシブ対応 -->
+  <title>あな持ち | あなたの持ち物写真展</title>
+  <!-- ページタブに表示される、サイトのタイトル -->
+  <meta name="description" content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。" />
+  <meta name="keywords" content="あな持ち, 持ち物, 道具, 個展, 写真展, 写真, カメラ, 投稿, sns, 写真 アプリ" />
+
+
+  <!-- sns関連のmetaタグ -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="あな持ち | あなたの持ち物写真展" />
+  <meta property="og:description" content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。" />
+  <meta property="og:site_name" content="あな持ち" />
+  <meta property="og:url" content="https://anamochi.yano/" />
+  <meta property="og:image" content="./img/item/ランタン.jpg" />
+
+  <!-- フェイスブック -->
+  <meta property="fb:app_id" content="(facebookID番号)" />
+
+  <!-- twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@anamochi" />
+  <meta name="twitter:title" content="あな持ち | あなたの持ち物写真展" />
+  <meta name="twitter:description" content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。" />
+  <meta name="twitter:image" content="./img/item/ランタン.jpg" />
+
+
+  <!-- ?? -->
+  <meta content="no-preview" name="turbolinks-cache-control" />
+  <meta name="csrf-param" content="authenticity_token" />
+  <meta name="csrf-token" content="ffARiT7n+qxzJrDgV3vVtznGet1fJdqfnYymG8oBJvNkY2vfTwK/X/nsHkC0k4869jvAPQ7q8BvyVi4I4nZXGA==" />
 
   <!-- icon -->
   <link rel="icon" sizes="192x192" href="./img/icon/シャッターアイコン4 (2).png" />
