レスポンシブ対応作業に取り掛かる。手始めにタイトルロゴ・トップ画像・スマホ表示の余白について対応。次回は個展一覧の部分について、paddingで設定していく。

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
   </head>
 
   <body>
+      <div class="over-wrap">
+
     <div id="common_nav"></div>
 
     <header>
@@ -304,5 +306,7 @@
       });
     </script>
 
+  <!-- /.wrap --></div>
   </body>
+
 </html>
