--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
   <!-- head内の要素についてメモを残しましょう。 -->
 
+    <!-- 文字コード -->
   <meta charset="utf-8" />
-  <!-- 文字コード -->
+    <!-- IEに最新の挙動をさせる -->
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-  <!-- IEに最新の挙動をさせる -->
+    <!-- レスポンシブ対応 -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <!-- レスポンシブ対応 -->
-  <title>あな持ち | あなたの持ち物写真展</title>
   <!-- ページタブに表示される、サイトのタイトル -->
+  <title>あな持ち | あなたの持ち物写真展</title>
+
   <meta name="description" content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。" />
   <meta name="keywords" content="あな持ち, 持ち物, 道具, 個展, 写真展, 写真, カメラ, 投稿, sns, 写真 アプリ" />
 
@@ -91,7 +92,7 @@
                 <img src="img/item/カフェとPC.jpg" alt="" />
                 <!-- <h4 class="menu-text left-one">このサイトは？</h4> -->
               </a>
-              <p class="menu-info">このサイトは？</p>
+              <p class="menu-info What-this">このサイトは？</p>
             </li>
 
             <li class="main1-item">
@@ -107,7 +108,7 @@
                 <img src="img/item/メイン_撮影風景.jpg" alt="" />
                 <!-- <h4 class="menu-text right-one">作業風景、撮影仲間</h4> -->
               </a>
-              <p class="menu-info">作業風景、自己紹介</p>
+              <p class="menu-info">自己紹介</p>
             </li>
           </ul>
           <div class="six col">
