個展一覧のレスポ対応

--- a/allgallery.html
+++ b/allgallery.html
@@ -59,6 +59,8 @@
   </head>
 
   <body>
+<div class="over-wrap">
+
     <div id="common_nav"></div>
 
     <header>
@@ -484,5 +486,7 @@
         }, 200);
       });
     </script>
+</div>
+
   </body>
 </html>
