--- a/exhibitions_page-1.html
+++ b/exhibitions_page-1.html
@@ -73,6 +73,8 @@
   </head>
 
   <body>
+<div class="over-wrap">
+
     <div id="common_nav"></div>
 
     <header>
@@ -578,7 +580,7 @@
               // percentPosition: true,
               layoutMode: 'masonry',
               masonry: {
-                columnWidth: 220
+                columnWidth: 50
                 // isFitWidth: true //親要素の幅に合わせてカラム数を自動調整するかしないか
               }
             })
@@ -601,5 +603,6 @@
         }, 200)
       })
     </script>
+    </div>
   </body>
 </html>
