遅延読み込み実装と、コード整理

--- a/allgallery.html
+++ b/allgallery.html
@@ -418,30 +418,11 @@
 
     <div id="common_footer"></div>
 
+
+
+    
     <!-- javascript -->
-    <script>
-      // 共通のページパーツ
-      $(function() {
-        $("#common_nav").load("nav.html");
-        $("#common_footer").load("footer.html");
-      });
-    </script>
-
-    <!-- <script src="./js/Underscore.js"></script>
-    <script src="./js/script.js"></script> -->
-
-    <script>
-      // カテゴリーボタンのアコーディオン設定
-      $(function() {
-        // 親メニュー処理
-        $(".cmn__dropdown-btn").click(function() {
-          // メニュー表示/非表示
-          $(this)
-            .next("#catsDropdown")
-            .slideToggle("fast");
-        });
-      });
-    </script>
+    <script src="./js/fadein.js"></script>
 
     <!-- ここからタイルレイアウト＆フィルター機能の設定。なかなか頑張ったと思う。 -->
     <script src="./js/isotope.pkgd.min.js"></script>
