サイト説明のページ追加

--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="ja">
-
-<head>
-  <!-- head内の要素についてメモを残しましょう。 -->
+  <head>
+    <!-- head内の要素についてメモを残しましょう。 -->
 
     <!-- 文字コード -->
-  <meta charset="utf-8" />
+    <meta charset="utf-8" />
     <!-- IEに最新の挙動をさせる -->
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <!-- レスポンシブ対応 -->
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <!-- ページタブに表示される、サイトのタイトル -->
-  <title>あな持ち | あなたの持ち物写真展</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <!-- ページタブに表示される、サイトのタイトル -->
+    <title>あな持ち | あなたの持ち物写真展</title>
 
-  <meta name="description" content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。" />
-  <meta name="keywords" content="あな持ち, 持ち物, 道具, 個展, 写真展, 写真, カメラ, 投稿, sns, 写真 アプリ" />
+    <meta
+      name="description"
+      content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。"
+    />
+    <meta
+      name="keywords"
+      content="あな持ち, 持ち物, 道具, 個展, 写真展, 写真, カメラ, 投稿, sns, 写真 アプリ"
+    />
 
-
-  <!-- sns関連のmetaタグ -->
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="あな持ち | あなたの持ち物写真展" />
-  <meta property="og:description" content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。" />
-  <meta property="og:site_name" content="あな持ち" />
-  <meta property="og:url" content="https://anamochi.yano/" />
-  <meta property="og:image" content="./img/item/ランタン.jpg" />
+    <!-- sns関連のmetaタグ -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="あな持ち | あなたの持ち物写真展" />
+    <meta
+      property="og:description"
+      content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。"
+    />
+    <meta property="og:site_name" content="あな持ち" />
+    <meta property="og:url" content="https://anamochi.yano/" />
+    <meta property="og:image" content="./img/item/ランタン.jpg" />
 
     <!-- sns関連のmetaタグ -->
     <meta property="og:type" content="website" />
@@ -92,23 +99,23 @@
         </div>
       </header>
 
-    <div class="contents">
-      <p class="gotop">
-        <a href="#">
-          <img src="./img/angel-up-thin-64.png" alt="ページトップへ戻る" />
-        </a>
-      </p>
-      <section id="main1" class="main1-cont">
-        <div id="half-top" class="wrap">
-          <h2 class="heading">ようこそ！</h2>
-          <ul class="menu-divst1">
-            <li class="main1-item">
-              <a href="./site_introduction.html">
-                <img src="img/item/カフェとPC.jpg" alt="" />
-                <!-- <h4 class="menu-text left-one">このサイトは？</h4> -->
-              </a>
-              <p class="menu-info What-this">このサイトは？</p>
-            </li>
+      <div class="contents">
+        <p class="gotop">
+          <a href="#">
+            <img src="./img/angel-up-thin-64.png" alt="ページトップへ戻る" />
+          </a>
+        </p>
+        <section id="main1" class="main1-cont">
+          <div id="half-top" class="wrap">
+            <h2 class="heading">ようこそ！</h2>
+            <ul class="menu-divst1">
+              <li class="main1-item">
+                <a href="./WhatsSite.html">
+                  <img src="img/item/カフェとPC.jpg" alt="" />
+                  <!-- <h4 class="menu-text left-one">このサイトは？</h4> -->
+                </a>
+                <p class="menu-info What-this">このサイトは？</p>
+              </li>
 
               <li class="main1-item">
                 <a href="#">
@@ -118,33 +125,23 @@
                 <p class="menu-info">感想</p>
               </li>
 
-            <li class="main1-item">
-              <a href="#">
-                <img src="img/item/メイン_撮影風景.jpg" alt="" />
-                <!-- <h4 class="menu-text right-one">作業風景、撮影仲間</h4> -->
-              </a>
-              <p class="menu-info">自己紹介</p>
-            </li>
-          </ul>
-          <div class="six col">
-            <a href="./allgallery.html" class="button" id="button-4"
-              >そんなことより写真集を見る</a
-            >
+              <li class="main1-item">
+                <a href="#">
+                  <img src="img/item/メイン_撮影風景.jpg" alt="" />
+                  <!-- <h4 class="menu-text right-one">作業風景、撮影仲間</h4> -->
+                </a>
+                <p class="menu-info">自己紹介</p>
+              </li>
+            </ul>
+            <div class="six col">
+              <a href="./allgallery.html" class="button" id="button-4"
+                >そんなことより写真集を見る</a
+              >
+            </div>
           </div>
         </section>
 
         <section id="main2" class="main2-cont">
-          <div id="loader-bg">
-            <div id="loader">
-              <img
-                src="img-loading.gif"
-                width="80"
-                height="80"
-                alt="Now Loading..."
-              />
-              <p>Now Loading...</p>
-            </div>
-          </div>
           <div id="wrap">
             <h2 class="heading">こちらもおすすめ</h2>
             <div id="container">
@@ -285,8 +282,6 @@
 
       <!-- javascript -->
       <script src="./js/jQuery.js"></script>
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
       <script src="./js/fadein.js"></script>
 
       <!-- ここからタイルレイアウト＆フィルター機能の設定。なかなか頑張ったと思う。 -->
