ajaxを適用した作業に取り掛かる。（次回から）

--- a/allgallery.html
+++ b/allgallery.html
@@ -89,7 +89,7 @@
         </ul>
 
         <div class="head__discover-others-wrap view-pc-tab">
-          <!-- キーワード検索 -->
+          <!--  キーワード検索 1/23現在、実装作業中  -->
           <div class="head__discover-search">
             <form
               class="head__discover-search-form"
