top画を再度修正

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
           />
         </div>
         <div class="title">
-          <p id="toptext">あなたの</p>
-          <h1>持ちモノ写真展</h1>
-          <h2>Now, please exhibit your ITEMS to us !</h2>
+          <p class="title_call">あなたの</p>
+          <h1 class="title_call">持ちモノ写真展</h1>
+          <h2 class="title_call">Now, please exhibit your ITEMS to us !</h2>
         </div>
       </header>
 
