--- a/allgallery.html
+++ b/allgallery.html
@@ -35,12 +35,6 @@
   <meta name="twitter:description" content="あな持ちは、あなたのお持ちのお気に入り道具をおしゃれに紹介できる写真展を無料で気軽に楽しむことができる、写真好きのためのSNSです。現在も製作中ですが、誰でも簡単に、そして自由にWeb個展を開催できるサービスを目指します。" />
   <meta name="twitter:image" content="./img/item/ランタン.jpg" />
 
-
-  <!-- ?? -->
-  <meta content="no-preview" name="turbolinks-cache-control" />
-  <meta name="csrf-param" content="authenticity_token" />
-  <meta name="csrf-token" content="ffARiT7n+qxzJrDgV3vVtznGet1fJdqfnYymG8oBJvNkY2vfTwK/X/nsHkC0k4869jvAPQ7q8BvyVi4I4nZXGA==" />
-
     <!-- icon -->
     <link
       rel="icon"
@@ -79,17 +73,10 @@
               >新着</a
             >
           </li>
-          <!--
-            <li class="closing head-lower__link-wrap">
-              <a class="head-lower__link active" href="/exhibitions/closing"
-                >終了間近</a
-              >
-            </li>
-          -->
         </ul>
 
         <div class="head__discover-others-wrap view-pc-tab">
-          <!--  キーワード検索 1/23現在、実装作業中  -->
+          <!--  キーワード検索 1/30現在、実装作業中  -->
           <div class="head__discover-search">
             <form
               class="head__discover-search-form"
@@ -156,18 +143,6 @@
             </div>
           </div>
         </div>
-        <!--
-          <div class="head__discover-mobile-wrap view-sp">
-            <div class="head__discover-mobile">
-              <div
-                class="head__discover-mobile-in empty icon-svg_close"
-                onclick="showDetailSearchModal('discover')"
-              >
-                詳細検索
-              </div>
-            </div>
-          </div>
-        -->
       </div>
     </header>
     <section>
@@ -176,7 +151,7 @@
           <img src="./img/angel-up-thin-64.png" alt="ページトップへ戻る" />
         </a>
       </p>
-      <!-- 読み込み中のヤツ -->
+      <!-- ロードアニメーション -->
       <!-- <div id="blue-loader" class="cmn__loader-wrap infinite-loader exhibits">
         <div class="wavy-loader">
           <div class="loader"><span></span></div>
@@ -186,7 +161,7 @@
       <div id="container">
         <div class="item type1">
           <figure>
-            <a href="./exhibitions_page-1 - コピー.html">
+            <a href="./exhibitions_page-1.html">
               <img src="img/item/キャンプ食器.jpg" alt="" />
               <figcaption><h3>いいね数とか取得</h3></figcaption>
             </a>
