--- a/exhibitions_page-1.html
+++ b/exhibitions_page-1.html
@@ -39,14 +39,6 @@
     />
     <meta name="twitter:image" content="./img/item/ランタン.jpg" />
 
-    <!-- ?? -->
-    <meta content="no-preview" name="turbolinks-cache-control" />
-    <meta name="csrf-param" content="authenticity_token" />
-    <meta
-      name="csrf-token"
-      content="ffARiT7n+qxzJrDgV3vVtznGet1fJdqfnYymG8oBJvNkY2vfTwK/X/nsHkC0k4869jvAPQ7q8BvyVi4I4nZXGA=="
-    />
-
     <!-- icon -->
     <link
       rel="icon"
@@ -290,94 +282,8 @@
                 </ul>
               </div>
             </div>
-
-            <!--
-              <div class="comments__list-wrap" id="commentListWrap">
-                <div class="comments__list-in">
-                  <div
-                    class="comments__list-show-more cmn__loader-wrap"
-                    onclick="getComments()"
-                  >
-                    <div class="txt standby active">古いコメントをさらに読む。</div>
-                    <div class="wavy-loader">
-                      <div class="loader"><span></span></div>
-                    </div>
-                  </div>
-                  <ul class="comments__list" id="commentList"></ul>
-                </div>
-              </div>
-            -->
-
-            <!--
-              <ul class="exhibition-show__tags">
-                <li
-                  class="exhibition-show__tag"
-                  onclick="discoverWithTag('smile', 'editors')"
-                >
-                  smile
-                </li>
-                <li
-                  class="exhibition-show__tag"
-                  onclick="discoverWithTag('streetphotography', 'editors')"
-                >
-                  streetphotography
-                </li>
-                <li
-                  class="exhibition-show__tag"
-                  onclick="discoverWithTag('snap', 'editors')"
-                >
-                  snap
-                </li>
-                <li
-                  class="exhibition-show__tag"
-                  onclick="discoverWithTag('bw', 'editors')"
-                >
-                  bw
-                </li>
-                <li
-                  class="exhibition-show__tag"
-                  onclick="discoverWithTag('monochrome', 'editors')"
-                >
-                  monochrome
-                </li>
-                <li
-                  class="exhibition-show__tag"
-                  onclick="discoverWithTag('smilephotography', 'editors')"
-                >
-                  smilephotography
-                </li>
-              </ul>
-            -->
           </div>
         </div>
-        <!--
-          <div class="exhibition-show__signup">
-            <div class="exhibition-show__signup-tit">さあ、あなたも！</div>
-            <div class="exhibition-show__signup-txt">
-              cotenは無料でご利用いただけます。
-            </div>
-            <a class="exhibition-show__signup-btn" href="/users/sign_up"
-              >cotenをはじめる</a
-            >
-          </div>
-        -->
-
-        <!--
-          <div class="flyers__wrap gallery">
-            <div class="flyers__in">
-              <h2 class="flyers__tit">こちらもおすすめ</h2>
-              <ul
-                class="exhibition__list exhibition-show__flyer-list"
-                id="flyerList"
-              ></ul>
-              <div class="cmn__loader-wrap infinite-loader flyers">
-                <div class="wavy-loader">
-                  <div class="loader"><span></span></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        -->
       </section>
       <section id="main2" class="main2-cont">
         <h2 class="heading">こちらもおすすめ</h2>
@@ -499,7 +405,7 @@
           </div>
         </div>
 
-        <!-- 読み込み中のヤツ -->
+        <!-- ロードアニメーション -->
         <!-- <div class="cmn__loader-wrap infinite-loader exhibits">
                 <div class="wavy-loader">
                   <div class="loader"><span></span></div>
@@ -542,7 +448,7 @@
       })
     </script>
 
-    <!-- ここからタイルレイアウト＆フィルター機能の設定。なかなか頑張ったと思う。 -->
+    <!-- ここからタイルレイアウト＆フィルター機能の設定。 -->
     <script src="./js/isotope.pkgd.min.js"></script>
 
     <script>
